# Trac-

./: .gitignore  README.md  pyproject.toml  test_agent.py
src/trace_cli/: __init__.py  cli.py  mcp_server.py
src/trace_cli/core/: __init__.py  analyzer.py  capture.py  config.py  git_context.py  redaction.py  storage.py
src/trace_cli/core/adapters/: __init__.py  antigravity.py  base.py  claude.py  gemini.py
src/trace_cli/output/: __init__.py  renderer.py
